--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Proxy to Fake Vue",
   "main": "index.js",
   "dependencies": {
+    "typescript": "^3.7.3",
     "webpack": "^4.41.2",
-    "webpack-dev-server": "^3.9.0"
+    "awesome-typescript-loader": "^5.2.1",
+    "webpack-cli": "^3.3.10"
   },
   "devDependencies": {
-    "webpack-cli": "^3.3.10"
+    "webpack-dev-server": "^3.9.0"
   },
   "scripts": {
     "build": "webpack",
